--- a/assets/styles/shopping.css
+++ b/assets/styles/shopping.css
@@ -42,3 +42,55 @@ section {
   font-weight: 300;
   line-height: 26px;
 }
+.cards {
+  padding-top: 50px;
+}
+.tomato-card {
+  width: 800px;
+  display: flex;
+  border: 2px solid var(--border-color);
+  border-radius: 24px;
+  background-color: var(--card-color);
+}
+.content {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  padding: 25px;
+}
+.content .text h2 {
+  font-family: "Inter", sans-serif;
+  font-size: 20px;
+  font-weight: 600;
+  line-height: 26px;
+  padding-bottom: 10px;
+}
+.content .text span {
+  display: block;
+  padding-bottom: 10px;
+  font-family: "Inter", sans-serif;
+  font-size: 20px;
+  font-weight: 600;
+  line-height: 26px;
+  color: var(--green-color);
+}
+.content .text p {
+  padding: 10px 15px;
+  border-radius: 20px;
+  border: 2px solid var(--border-color);
+  font-family: "Inter", sans-serif;
+  font-size: 20px;
+  font-weight: 600;
+  background-color: var(--white-color);
+}
+.content .price {
+  font-family: "Inter", sans-serif;
+  font-size: 20px;
+  font-weight: 600;
+  line-height: 26px;
+}
+img {
+  width: 160px;
+  border-top-left-radius: 24px;
+  border-bottom-left-radius: 24px;
+}
