--- a/assets/styles/product.css
+++ b/assets/styles/product.css
@@ -10,7 +10,9 @@
 .cards {
   padding-top: 50px;
 }
-.tomato-card {
+.tomato-card,
+.ginger-card,
+.onion-card {
   width: 800px;
   display: flex;
   border: 2px solid var(--border-color);
@@ -54,6 +56,7 @@
   font-weight: 600;
   line-height: 26px;
 }
+
 img {
   width: 160px;
   border-top-left-radius: 24px;
