Creat: Order Summary And Responsive Design

--- a/assets/styles/navbar.css
+++ b/assets/styles/navbar.css
@@ -41,7 +41,7 @@ header {
   background-color: whitesmoke;
   position: sticky;
   top: 0;
-  padding: 25px;
+  padding: 25px 0;
 }
 header .container {
   display: flex;
