--- a/assets/styles/shopping.css
+++ b/assets/styles/shopping.css
@@ -19,6 +19,11 @@
     width: 1170px;
   }
 }
+.btn {
+  display: block;
+  width: 100%;
+  margin: 15px 0;
+}
 section {
   padding: 80px 0;
 }
@@ -42,13 +47,17 @@ section {
   font-weight: 300;
   line-height: 26px;
 }
-.cards {
+.all-cards {
+  display: flex;
+  justify-content: space-between;
+}
+.cards-vegetables {
   padding-top: 50px;
 }
 .tomato-card,
 .ginger-card,
 .onion-card {
-  width: 800px;
+  width: 750px;
   display: flex;
   border: 2px solid var(--border-color);
   border-radius: 24px;
@@ -98,4 +107,65 @@ img {
   width: 160px;
   border-top-left-radius: 24px;
   border-bottom-left-radius: 24px;
+}
+.order-summary {
+  width: 350px;
+  height: 320px;
+  padding: 25px;
+  margin-top: 50px;
+  border: 2px solid var(--border-color);
+  border-radius: 24px;
+  background-color: var(--card-color);
+}
+.content-order-summary {
+  padding-top: 25px;
+  display: flex;
+  justify-content: space-between;
+}
+.content-order-summary span {
+  display: block;
+  margin: 15px 0;
+}
+.total-price {
+  font-family: "Inter", sans-serif;
+  font-size: 16px;
+  font-weight: 600;
+}
+/* ipad */
+@media (min-width: 768px) and (max-width: 1024px) {
+  .all-cards {
+    flex-wrap: wrap;
+    width: 100%;
+  }
+  .cards-vegetables {
+    width: 100%;
+  }
+  .tomato-card,
+  .ginger-card,
+  .onion-card {
+    width: 100%;
+  }
+  .order-summary {
+    width: 100%;
+  }
+}
+/* mobile */
+@media (max-width: 450px) {
+  .all-cards {
+    flex-wrap: wrap;
+    width: 100%;
+    justify-content: center;
+  }
+  .cards-vegetables {
+    width: 100%;
+  }
+  .tomato-card,
+  .ginger-card,
+  .onion-card {
+    width: 100%;
+  }
+  .order-summary {
+    width: 100%;
+    margin-left: 0;
+  }
 }
